--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 div.a{
   width: 100px;
   height: 100px;
-  background: green;
+  background: pink;
+  transition: width 2s ;
 }
 div.b{
   width: 100px;
   height: 100px;
-  background: green;
+  transition: width 2s,height 2s;
 }
 
 div.a:hover {
