--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@ div.a{
   width: 100px;
   height: 100px;
   background: pink;
-  transition: width 2s ;
+  transition: width 2s;
 }
 div.b{
   width: 100px;
   height: 100px;
+  background: pink;
   transition: width 2s,height 2s;
 }
 
